--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="table">
-  <div class="topnav">
+  <div style="top: 0%;" class="topnav">
     <a class="active" href="/">Home</a>
     <a href="Loans">Loans</a>
     <a href="Books">Books</a>
@@ -18,6 +18,7 @@
   </div>
 
   <div class="content" style="margin: 25px 50px 75px 50px;">
+    <br><br>
     <h2>Welcome to My Library</h2>
     <p>Welcome to our library management system. Here, you can easily manage your library's collection of books, loans,
       and customers.</p>
