--- a/frontend/html/Loans.html
+++ b/frontend/html/Loans.html
@@ -14,7 +14,7 @@
   <title>Loans</title>
 </head>
 
-<body>
+<body class="bg-image">
 
   <div class="sidenav">
     <a href="#" onclick="getAllLoans()" id="a">All Loans</a>
@@ -35,7 +35,7 @@
   </div>
 
   <div id="searchDiv"></div>
-
+  <br>
   <div>
     <table style="margin-left: 85px;" class="table" id="loansTable"></table>
   </div>
