--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -9,7 +9,7 @@
   <title>Home</title>
 </head>
 
-<body class="table">
+<body class="table bg-image">
   <div style="top: 0%;" class="topnav">
     <a class="active" href="/">Home</a>
     <a href="Loans">Loans</a>
