--- a/frontend/html/customers.html
+++ b/frontend/html/customers.html
@@ -55,7 +55,7 @@
         <h5>edit customer</h5>
         <form id="editForm">
             <label for="customerID">New customerID:</label>
-            <input type="text" id="newCustomerID" name="customerID"><br>
+            <input type="number" id="newCustomerID" name="customerID"><br>
 
             <label for="Name">New name:</label>
             <input type="text" id="newName" name="Name"><br>
